--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">OwnCloud Notes</string>
+    <string name="app_name">ownCloud Notes</string>
     <string name="action_create">New Note</string>
     <string name="action_settings">Settings</string>
     <string name="action_create_save">Save</string>
