--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_settings">Einstellungen</string>
     <string name="action_create_save">Speichern</string>
     <string name="action_edit_save">Speichern</string>
+    <string name="action_select_note">Notiz auswählen</string>
     <string name="action_about">Über</string>
     <string name="menu_delete">Löschen</string>
     <string name="menu_copy">Kopieren</string>
