--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -5,7 +5,9 @@
     <string name="action_create">Neue Notiz</string>
     <string name="action_settings">Einstellungen</string>
     <string name="action_create_save">Speichern</string>
+    <string name="action_create_cancel">Abbrechen</string>
     <string name="action_edit_save">Speichern</string>
+    <string name="action_edit_cancel">Abbrechen</string>
     <string name="action_select_note">Notiz auswählen</string>
     <string name="action_about">Über</string>
     <string name="menu_delete">Löschen</string>
