--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
     <string name="action_create">New Note</string>
     <string name="action_settings">Settings</string>
     <string name="action_create_save">Save</string>
+    <string name="action_create_cancel">Cancel</string>
     <string name="action_edit_save">Save</string>
+    <string name="action_edit_cancel">Cancel</string>
     <string name="action_about">About</string>
     <string name="action_select_note">Select Note</string>
     <string name="menu_delete">Delete</string>
