--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -36,7 +36,7 @@
     <string name="settings_server">Server</string>
     <string name="settings_url">URL</string>
     <string name="settings_url_check_description">Zeigt an, ob die angegebene URL erreichbar ist.</string>
-    <string name="settings_url_warn_http">WARNUNG: http ist unsicher. Bitte benutzen Sie https.</string>
+    <string name="settings_url_warn_http">WARNUNG: "http" ist unsicher. Bitte benutzen Sie "https".</string>
     <string name="settings_username">Benutzername</string>
     <string name="settings_password">Passwort</string>
     <string name="settings_password_check_description">Zeigt an, ob die angegebenen Zugangsdaten korrekt sind.</string>
