--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,12 +20,11 @@
 
     <string name="copy">Copy</string>
 
-    <string name="listview_updated_recent">Updated recently</string>
-    <string name="listview_updated_today">Updated today</string>
-    <string name="listview_updated_yesterday">Updated yesterday</string>
-    <string name="listview_updated_this_week">Updated this week</string>
-    <string name="listview_updated_this_month">Updated this month</string>
-    <string name="listview_updated_earlier">Updated earlier</string>
+    <string name="listview_updated_today">today</string>
+    <string name="listview_updated_yesterday">yesterday</string>
+    <string name="listview_updated_this_week">this week</string>
+    <string name="listview_updated_this_month">this month</string>
+    <string name="listview_updated_earlier">earlier</string>
 
     <!-- About -->
 
