--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">ownCloud Notes</string>
+    <string name="no_notes">Noch keine Notizen vorhanden</string>
     <string name="action_create">Neue Notiz</string>
     <string name="action_settings">Einstellungen</string>
     <string name="action_create_save">Speichern</string>
