--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -8,6 +8,8 @@
     <string name="action_create_save">Speichern</string>
     <string name="action_create_cancel">Abbrechen</string>
     <string name="action_edit_save">Speichern</string>
+    <string name="action_edit_saving">Speichern&#8230;</string>
+    <string name="action_edit_saved">Gespeichert</string>
     <string name="action_edit_cancel">Abbrechen</string>
     <string name="action_select_note">Notiz auswählen</string>
     <string name="action_about">Über</string>
