--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="action_create_save">Save</string>
     <string name="action_create_cancel">Cancel</string>
     <string name="action_edit_save">Save</string>
+    <string name="action_edit_saving">Saving&#8230;</string>
+    <string name="action_edit_saved">Saved</string>
     <string name="action_edit_cancel">Cancel</string>
     <string name="action_about">About</string>
     <string name="action_select_note">Select Note</string>
