--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_create_save">Save</string>
     <string name="action_create_cancel">Cancel</string>
+    <string name="action_edit_editing">Edit</string>
     <string name="action_edit_save">Save</string>
     <string name="action_edit_saving">Saving&#8230;</string>
     <string name="action_edit_saved">Saved</string>
