--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -30,17 +30,6 @@
     <string name="listview_updated_this_month">Diesen Monat</string>
     <string name="listview_updated_earlier">Früher</string>
 
-    <!-- About -->
-
-	<string name="about_version_title">Version</string>
-    <string name="about_version">Sie benutzen aktuell <strong>v0.4.0</strong></string>
-	<string name="about_author_title">Autor</string>
-	<string name="about_author">Diese Android-App wird entwickelt von <a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen</a></string>
-    <string name="about_app_icon_disclaimer_title">App-Icon</string>
-    <string name="about_app_icon_disclaimer"><p>Ursprüngliches Icon wurde erstellt von <a href="http://www.freepik.com" title="Freepik">Freepik</a> auf <a href="http://www.flaticon.com/free-icon/ceo-copyrighting_15475" title="Flaticon">www.flaticon.com</a></p></string>
-    <string name="about_icons_disclaimer_title">Icons</string>
-    <string name="about_icons_disclaimer"><p>Alle weiteren Icons, die in dieser App verwendet werden, sind <a href="https://materialdesignicons.com/" title="Link to Website">Material Design Icons</a> von Google Inc. und unter einer Creative Commons License lizensiert.</p></string>
-
     <!-- Settings -->
 
     <string name="settings_server">Server</string>
@@ -68,4 +57,19 @@
 
     <!-- Snackbar Actions -->
     <string name="snackbar_settings">Einstellungen</string>
+
+    <!-- About -->
+
+    <string name="about_version_title">Version</string>
+    <string name="about_version">Sie benutzen aktuell <strong>v0.4.0</strong></string>
+    <string name="about_author_title">Autor</string>
+    <string name="about_author">Diese Android-App wird entwickelt von <a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen</a></string>
+    <string name="about_app_icon_disclaimer_title">App-Icon</string>
+    <string name="about_app_icon_disclaimer"><p>Ursprüngliches Icon wurde erstellt von <a href="http://www.freepik.com" title="Freepik">Freepik</a> auf <a href="http://www.flaticon.com/free-icon/ceo-copyrighting_15475" title="Flaticon">www.flaticon.com</a></p></string>
+    <string name="about_icons_disclaimer_title">Icons</string>
+    <string name="about_icons_disclaimer"><p>Alle weiteren Icons, die in dieser App verwendet werden, sind <a href="https://materialdesignicons.com/" title="Link to Website">Material Design Icons</a> von Google Inc. und unter einer Creative Commons License lizensiert.</p></string>
+
+    <string name="about_credits_tab_title">Credits</string>
+    <string name="about_contribution_tab_title">Contribution</string>
+    <string name="about_license_tab_title">License</string>
 </resources>
