--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,17 +30,6 @@
     <string name="listview_updated_this_month">this month</string>
     <string name="listview_updated_earlier">earlier</string>
 
-    <!-- About -->
-
-	<string name="about_version_title">Version</string>
-    <string name="about_version">You are currently using <strong>v0.4.0</strong></string>
-	<string name="about_author_title">Author</string>
-	<string name="about_author">This Android-Application is developed and presented by <a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen</a></string>
-    <string name="about_app_icon_disclaimer_title">App-Icon</string>
-    <string name="about_app_icon_disclaimer"><p>Original icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com/free-icon/ceo-copyrighting_15475" title="Flaticon">www.flaticon.com</a></p></string>
-    <string name="about_icons_disclaimer_title">Icons</string>
-    <string name="about_icons_disclaimer"><p>All further icons used by this app are <a href="https://materialdesignicons.com/" title="Link to Website">Material Design Icons</a> made by Google Inc. and licensed under a Creative Commons License.</p></string>
-
     <!-- Settings -->
 
     <string name="settings_server">Server</string>
@@ -69,4 +58,19 @@
     <!-- Snackbar Actions -->
     <string name="snackbar_settings">Settings</string>
 
+
+    <!-- About -->
+
+    <string name="about_version_title">Version</string>
+    <string name="about_version">You are currently using <strong>v0.4.0</strong></string>
+    <string name="about_author_title">Author</string>
+    <string name="about_author">This Android-Application is developed and presented by <a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen</a></string>
+    <string name="about_app_icon_disclaimer_title">App-Icon</string>
+    <string name="about_app_icon_disclaimer"><p>Original icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com/free-icon/ceo-copyrighting_15475" title="Flaticon">www.flaticon.com</a></p></string>
+    <string name="about_icons_disclaimer_title">Icons</string>
+    <string name="about_icons_disclaimer"><p>All further icons used by this app are <a href="https://materialdesignicons.com/" title="Link to Website">Material Design Icons</a> made by Google Inc. and licensed under a Creative Commons License.</p></string>
+
+    <string name="about_credits_tab_title">Credits</string>
+    <string name="about_contribution_tab_title">Contribution</string>
+    <string name="about_license_tab_title">License</string>
 </resources>
