--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,17 +3,17 @@
 
     <string name="app_name">ownCloud Notes</string>
     <string name="no_notes">No notes yet</string>
-    <string name="action_create">New Note</string>
+    <string name="action_create">New note</string>
     <string name="action_settings">Settings</string>
     <string name="action_create_save">Save</string>
     <string name="action_create_cancel">Cancel</string>
     <string name="action_edit_editing">Edit</string>
     <string name="action_edit_save">Save</string>
-    <string name="action_edit_saving">Saving&#8230;</string>
+    <string name="action_edit_saving">Saving &#8230;</string>
     <string name="action_edit_saved">Saved</string>
     <string name="action_edit_cancel">Cancel</string>
     <string name="action_about">About</string>
-    <string name="action_select_note">Select Note</string>
+    <string name="action_select_note">Select note</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_copy">Copy</string>
     <string name="menu_edit">Edit</string>
@@ -24,23 +24,23 @@
 
     <string name="copy">Copy</string>
 
-    <string name="listview_updated_today">today</string>
-    <string name="listview_updated_yesterday">yesterday</string>
-    <string name="listview_updated_this_week">this week</string>
-    <string name="listview_updated_this_month">this month</string>
-    <string name="listview_updated_earlier">earlier</string>
+    <string name="listview_updated_today">Today</string>
+    <string name="listview_updated_yesterday">Yesterday</string>
+    <string name="listview_updated_this_week">This week</string>
+    <string name="listview_updated_this_month">This month</string>
+    <string name="listview_updated_earlier">Earlier</string>
 
     <!-- Settings -->
 
     <string name="settings_server">Server</string>
     <string name="settings_url">Server address</string>
-    <string name="settings_url_check_description">Shows if the URL can be pinged.</string>
+    <string name="settings_url_check_description">Shows if the address can be pinged.</string>
     <string name="settings_url_warn_http">WARNING: "http" is unsafe. Please use "https".</string>
     <string name="settings_username">Username</string>
     <string name="settings_password">Password</string>
-    <string name="settings_password_check_description">Shows if the given credentials are correct.</string>
+    <string name="settings_password_check_description">Shows if the credentials are correct.</string>
     <string name="settings_submit">Connect</string>
-    <string name="settings_submitting">Connecting&#8230;</string>
+    <string name="settings_submitting">Connecting &#8230;</string>
 
     <!-- Network -->
 
@@ -50,10 +50,10 @@
 
     <!-- Error -->
 
-    <string name="error_url_malformed">URL Malformed</string>
-    <string name="error_json">JSON Error</string>
-    <string name="error_io">IO Error</string>
-    <string name="error_username_password_invalid">Username / Password invalid</string>
+    <string name="error_url_malformed">Wrong server address</string>
+    <string name="error_json">JSON error</string>
+    <string name="error_io">IO error</string>
+    <string name="error_username_password_invalid">Wrong username or password</string>
 
     <!-- Snackbar Actions -->
     <string name="snackbar_settings">Settings</string>
@@ -71,14 +71,14 @@
     <string name="about_translators">pejakm (Serbian)</string>
     <string name="about_testers_title">Testers</string>
     <string name="about_testers">Jan C. Borchardt</string>
-    <string name="about_source_title">Source Code</string>
+    <string name="about_source_title">Source code</string>
     <string name="about_source">This project is hosted on GitHub: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
     <string name="about_issues_title">Issues</string>
     <string name="about_issues">You can report bugs, enhancement proposals and feature requests at the GitHub issue tracker: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
-    <string name="about_app_license_title">App License</string>
+    <string name="about_app_license_title">App license</string>
     <string name="about_app_license">This application is licensed under the GNU GENERAL PUBLIC LICENSE v2.</string>
-    <string name="about_app_license_button">View License</string>
-    <string name="about_app_icon_disclaimer_title">App-Icon</string>
+    <string name="about_app_license_button">View license</string>
+    <string name="about_app_icon_disclaimer_title">App icon</string>
     <string name="about_app_icon_disclaimer"><p>Original icon made by <a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> from <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="GitHub">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Icons</string>
     <string name="about_icons_disclaimer"><p>All further icons used by this app are <a href="https://materialdesignicons.com/" title="Link to Website">Material Design Icons</a> made by Google Inc. and licensed under a Creative Commons License.</p></string>
@@ -87,6 +87,6 @@
     <string name="about_contribution_tab_title">Contribution</string>
     <string name="about_license_tab_title">License</string>
 
-    <string name="widget_all_notes_title">All Notes</string>
-    <string name="widget_single_note_title">Single Note</string>
+    <string name="widget_all_notes_title">All notes</string>
+    <string name="widget_single_note_title">Single note</string>
 </resources>
