Mention french translator in every language and rename fr-FR to fr

--- a/app/src/main/res/values-hy/strings.xml
+++ b/app/src/main/res/values-hy/strings.xml
@@ -67,7 +67,7 @@
     <string name="about_developers_title">ծրագրավորող</string>
     <string name="about_developers">Stefan Niedermann, HeaDBanGer84</string>
     <string name="about_translators_title">թարգմանիչ</string>
-    <string name="about_translators">Արթուր Դավթյան</string>
+    <string name="about_translators">Արթուր Դավթյան, ageru (Français (France))</string>
     <string name="about_testers_title">թեսթավորող</string>
     <string name="about_testers">Jan C. Borchardt</string>
     <string name="about_source_title">ծրագրի կոդը</string>
