--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -67,7 +67,7 @@
     <string name="about_developers_title">Entwickler</string>
     <string name="about_developers">Stefan Niedermann, HeaDBanGer84</string>
     <string name="about_translators_title">Übersetzer</string>
-    <string name="about_translators">pejakm (Serbian)</string>
+    <string name="about_translators">pejakm (Serbe), ageru (Français (France))</string>
     <string name="about_testers_title">Tester</string>
     <string name="about_testers">Jan C. Borchardt</string>
     <string name="about_source_title">Quellcode</string>
