--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -67,7 +67,7 @@
     <string name="about_developers_title">разработчики</string>
     <string name="about_developers">Stefan Niedermann, HeaDBanGer84</string>
     <string name="about_translators_title">переводчики</string>
-    <string name="about_translators">pejakm (Serbian)</string>
+    <string name="about_translators">pejakm (Serbian), ageru (Français (France))</string>
     <string name="about_testers_title">испытатели</string>
     <string name="about_testers">Jan C. Borchardt</string>
     <string name="about_source_title">код программы</string>
