--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,7 @@
     <string name="about_developers_title">Developers</string>
     <string name="about_developers">Stefan Niedermann, HeaDBanGer84</string>
     <string name="about_translators_title">Translators</string>
-    <string name="about_translators">pejakm (Serbian)</string>
+    <string name="about_translators">pejakm (Serbe), ageru (Français (France))</string>
     <string name="about_testers_title">Testers</string>
     <string name="about_testers">Jan C. Borchardt</string>
     <string name="about_source_title">Source code</string>
