--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -76,7 +76,7 @@
     <string name="about_issues_title">Bugs</string>
     <string name="about_issues">Vous pouvez signaler les bugs ainsi que vos propositions ou demandes d\'amélioration dans le gestionnaire de bugs de GitHub : <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
     <string name="about_app_license_title">Licence de l\'App</string>
-    <string name="about_app_license">Cette application est licenciée selon les termes de la GNU GENERAL PUBLIC LICENSE v2.</string>
+    <string name="about_app_license">Cette application est licenciée selon les termes de la GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Voir la licence</string>
     <string name="about_app_icon_disclaimer_title">Icône de l\'app</string>
     <string name="about_app_icon_disclaimer"><p>Icône originale créée par <a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> disponible <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="ownCloud Notes app icon on GitHub">sur GitHub</a>.</p></string>
