--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -75,7 +75,7 @@
     <string name="about_issues_title">заявки</string>
     <string name="about_issues">вы можете свои пожелания и предложения по функциональности ownCloud Notes изложить в GitHub системе заявок: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
     <string name="about_app_license_title">лицензия программы</string>
-    <string name="about_app_license">это программа лицензированна под GNU GENERAL PUBLIC LICENSE v2.</string>
+    <string name="about_app_license">это программа лицензированна под GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">просмотреть лицензию</string>
     <string name="about_app_icon_disclaimer_title">логотип программы</string>
     <string name="about_app_icon_disclaimer"><p>первоначальый логотип был составлен <a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> на <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="GitHub">www.github.com</a></p></string>
