--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,7 @@
     <string name="about_issues_title">Issues</string>
     <string name="about_issues">You can report bugs, enhancement proposals and feature requests at the GitHub issue tracker: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
     <string name="about_app_license_title">App license</string>
-    <string name="about_app_license">This application is licensed under the GNU GENERAL PUBLIC LICENSE v2.</string>
+    <string name="about_app_license">This application is licensed under the GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">View license</string>
     <string name="about_app_icon_disclaimer_title">App icon</string>
     <string name="about_app_icon_disclaimer"><p>Original icon made by <a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> from <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="GitHub">www.github.com</a></p></string>
