--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -29,9 +29,8 @@
     <string name="listview_updated_earlier">Früher</string>
 
     <!-- Settings -->
-
     <string name="settings_server">Server</string>
-    <string name="settings_url">Server Adresse</string>
+    <string name="settings_url">Server-Adresse</string>
     <string name="settings_url_check_description">Zeigt an, ob die angegebene URL erreichbar ist.</string>
     <string name="settings_url_warn_http">WARNUNG: "http" ist unsicher. Bitte benutzen Sie "https".</string>
     <string name="settings_username">Benutzername</string>
@@ -41,23 +40,21 @@
     <string name="settings_submitting">Verbindet&#8230;</string>
 
     <!-- Network -->
-
     <string name="network_connecting">Verbindung wird hergestellt</string>
     <string name="network_connected">Verbunden</string>
     <string name="network_disconnected">Kein Netzwerk verfügbar</string>
 
     <!-- Error -->
-
+    <string name="error_json">JSON-Fehler</string>
+    <string name="error_io">IO-Fehler</string>
+    <string name="error_invalid login">Login fehlgeschlagen</string>
     <string name="error_url_malformed">URL nicht korrekt</string>
-    <string name="error_json">JSON Fehler</string>
-    <string name="error_io">IO Fehler</string>
     <string name="error_username_password_invalid">Benutzername / Passwort nicht korrekt</string>
 
     <!-- Snackbar Actions -->
     <string name="snackbar_settings">Einstellungen</string>
 
     <!-- About -->
-
     <string name="about_version_title">Version</string>
     <string name="about_version">Sie benutzen aktuell <strong>v0.7.0</strong></string>
     <string name="about_maintainer_title">Maintainer</string>
